<resources>
    <string name="app_name">Journal</string>
    <string name="journal">Journal</string>
    <string name="todo">TODO</string>
    <string name="about_us">About US</string>
    <string name="settings">settings</string>
    <string name="schedule">Class schedule</string>
    <string name="magazine">Register</string>
    <string name="your_class">Your Class</string>
    <string name="classes">Classes</string>
    <string name="your_schedule">Your schedule</string>
    <string name="have_problems">Have Problems</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>